src/test/deca/syntax/valid/var_set.deca
//Description
// Vérifier la déclaration de variable en set;
//
//Résultats :
//   Ok
//


{
  int x=1 , y=x;
}
