src/test/deca/syntax/invalid/ident_var2.deca
//Description
//    Vérifier les noms d'ident uniques
//
//Résultats :
//    Erreur Lexicale:
//    Ligne 9

{
int while = 3;
}
